옵션 삭제버튼 에러수정

--- a/survey/static/css/responser_base.css
+++ b/survey/static/css/responser_base.css
@@ -50,6 +50,10 @@ button:hover {
 
 /* mobile */
 @media screen and (max-width: 1024px) {
+  body,
+  html {
+    width: 100%;
+  }
   /* header */
   header {
     position: fixed;
