--- a/survey/templates/survey/statistics.html
+++ b/survey/templates/survey/statistics.html
@@ -18,7 +18,8 @@
             id="{{question.id}}" 
             class="question-wrapper" 
             data-title="{{question.title}}" 
-            data-type="{{question.question_type}}">
+            data-type="{{question.question_type}}"
+            data-answer-count="{{question.answers.all.count}}">
             <h2 class="question_title">
                 {{question.title}}
             </h2>
