--- a/survey/static/css/admin_base.css
+++ b/survey/static/css/admin_base.css
@@ -80,60 +80,18 @@ button:hover {
 /* end etc */
 
 /* mobile */
-@media screen and (max-width: 1024px) {
-  body,
-  html {
-    width: 100%;
-  }
+@media (max-width: 768px) {
   /* header */
-  header {
-    position: fixed;
-    z-index: 9999;
-    width: 100%;
-    height: 240px;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: 1px 1px 5px 1px black;
-  }
-  .header {
-    width: 60%;
-    font-weight: 900;
-    padding: 10px 5px;
-    font-size: 50px;
-    text-align: center;
-    overflow-y: scroll;
-    margin-top: 10px;
-  }
-  .header-nav {
-    position: relative;
-    width: 95%;
-    display: flex;
-    justify-content: space-between;
-    background-color: #edf2ff;
-    border-radius: 10px 10px 0px 0px;
-    padding: 20px 10px;
-    text-align: center;
-    margin-top: auto;
-  }
-  .header-nav > a {
-    font-size: 2rem;
-    padding: 10px 40px;
-  }
-  .header-nav-active {
-    border-bottom: 1px solid black;
-  }
   .download-result {
     position: absolute;
-    width: 100px;
-    top: 40px;
-    right: 30px;
+    top: 10px;
+    right: 10px;
+    width: 50px;
     background-color: black;
     color: white;
-    padding: 15px 8px;
+    padding: 5px 10px;
     border-radius: 10px;
-    font-size: 1.5rem;
+    font-size: 0.7rem;
   }
   /* end header */
   /* common button */
@@ -141,22 +99,27 @@ button:hover {
     padding: 10px 25px;
     background-color: #ff6b6b;
     border-radius: 10px;
-    font-size: 2rem;
+    font-size: 1rem;
   }
   /* end common button */
   /* container */
   #container {
-    width: 768px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: auto;
   }
   /* end container */
+  /* select */
+  select {
+    font-size: 2.5rem;
+  }
+  /* end select */
   /* etc */
   .blank-div {
     width: 100%;
-    height: 250px;
+    height: 150px;
   }
   .nothing-text {
     font-size: 60px;
