--- a/survey/static/css/response_list.css
+++ b/survey/static/css/response_list.css
@@ -43,43 +43,43 @@
 }
 /* end answer */
 /* mobile */
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
   /* response */
   .response-list {
     width: 100%;
   }
   .response_total_num {
-    font-size: 50px;
+    font-size: 1rem;
     padding-bottom: 20px;
   }
   .response_index-wrapper {
     display: flex;
-    width: 400px;
     justify-content: space-between;
     align-items: center;
     padding: 10px 5px;
   }
   .response_index-wrapper > button {
-    font-size: 80px;
+    font-size: 1rem;
     padding: 0px 20px;
   }
   .response_index {
-    font-size: 70px;
+    font-size: 1rem;
   }
   .response-wrapper {
-    width: 100%;
-    border: 1px solid midnightblue;
-    padding: 10px 25px;
-    font-size: 2.5rem;
+    border: 1px solid #dbe4ff;
+    background-color: white;
+    padding: 30px 30px;
+    border-radius: 20px;
+    display: none;
   }
   input[type="radio"],
   input[type="checkbox"] {
-    width: 40px;
-    height: 40px;
+    width: 20px;
+    height: 20px;
   }
   select {
     padding: 10px 10px;
-    font-size: 2.5rem;
+    font-size: 1rem;
   }
   .response_responser {
     padding: 30px 10px;
