--- a/survey/static/css/responser.css
+++ b/survey/static/css/responser.css
@@ -56,25 +56,24 @@ input:valid {
 }
 /* end submit */
 /* mobile */
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
   #survey-form {
-    width: 100%;
-    font-size: 2rem;
+    font-size: 1rem;
   }
   .question-wrapper {
-    padding: 80px 50px;
+    padding: 30px 30px;
   }
   input[type="radio"],
   input[type="checkbox"] {
-    width: 40px;
-    height: 40px;
+    width: 1rem;
+    height: 1rem;
   }
   select {
     padding: 10px 10px;
-    font-size: 2.5rem;
+    font-size: 1rem;
   }
   input {
-    font-size: 40px;
+    font-size: 1rem;
     margin-top: 10px;
   }
 }
