핸드폰번호 입력시 자동 하이픈 덧붙임 추가

--- a/survey/templates/survey/responser.html
+++ b/survey/templates/survey/responser.html
@@ -71,7 +71,13 @@
     </div>
     {% endfor %}
     <div class="submit-wrapper">
-        <input type="tel" placeholder="010-0000-0000" name="phone_number" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}" required>
+        <input 
+            type="tel" 
+            placeholder="010-0000-0000" 
+            name="phone_number" 
+            pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}"
+            id="phone_number"
+            required>
         <br><br>
         <button type="submit">제출</button>
     </div>
