edit.html > question_title > value 수정

--- a/survey/templates/survey/edit.html
+++ b/survey/templates/survey/edit.html
@@ -32,7 +32,7 @@
                     저장
                 </button>
             </div>
-            <input type="text" placeholder="질문 제목 입력" value={{question.title}} class="question_title">
+            <input type="text" placeholder="질문 제목 입력" value="{{question.title}}" class="question_title">
             <select 
                 name="question{{question.id}}_type" 
                 id="question{{question.id}}_type" 
