--- a/survey/templates/survey/responser_base.html
+++ b/survey/templates/survey/responser_base.html
@@ -20,7 +20,9 @@
 <body>
     <header>
         <h1 class="header">
-            {{survey.title}}
+            {% if survey.is_activated %}
+                {{survey.title}}
+            {% endif %}
         </h1>
     </header>
     <div class="blank-div"></div>
