phone input maxlength 추가

--- a/survey/templates/survey/responser.html
+++ b/survey/templates/survey/responser.html
@@ -77,6 +77,7 @@
             placeholder="010-0000-0000" 
             name="phone_number" 
             pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}"
+            maxlength="13"
             id="phone_number"
             required>
         <br><br>
